Added ZGC Samples